@@ -1,84 +1,61 @@
-plugins {
-    id "java"
-    id "org.springframework.boot" version "2.3.0.RELEASE"
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
-}
+subprojects {
+    apply plugin: "java"
 
-group "pickjob"
-version "0.0.1"
-ext.mainClassName = "app.Application"
+    group = "pickjob"
+    version = "0.0.1"
 
-configurations {
-    implementation {
-        exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
-        exclude group: "ch.qos.logback", module: "logback-classic"
+    configurations {
+        implementation {
+            exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
+            exclude group: "ch.qos.logback", module: "logback-classic"
+        }
     }
-}
 
-dependencies {
-    // log4j
-    implementation "com.lmax:disruptor:3.4.2"
-    implementation "org.apache.commons:commons-lang3:3.8"
-    // mysql
-    implementation "mysql:mysql-connector-java:8.0.15"
-    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"
-
-    implementation "org.apache.commons:commons-pool2:2.7.0"
-    // caffeine
-    implementation "com.github.ben-manes.caffeine:caffeine:2.8.2"
-    // jwt
-    implementation "org.bitbucket.b_c:jose4j:0.7.2"
-    // shiro
-    implementation "org.apache.shiro:shiro-spring-boot-web-starter:1.5.0"
-    // springdoc
-    implementation "org.springdoc:springdoc-openapi-common:${springdocVersion}"
-    implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
-    implementation "org.springdoc:springdoc-openapi-hateoas:${springdocVersion}"
-    implementation "org.springdoc:springdoc-openapi-data-rest:${springdocVersion}"
-
-    implementation "org.javassist:javassist:3.20.0-GA"
-    implementation "org.aspectj:aspectjweaver:1.9.3"
-    implementation "cglib:cglib:3.2.11"
-
-    implementation "org.springframework.boot:spring-boot-starter-log4j2"
-    implementation "org.springframework.boot:spring-boot-starter-aop"
-    implementation "org.springframework.boot:spring-boot-starter-cache"
-    implementation "org.springframework.boot:spring-boot-starter-quartz"
-    implementation "org.springframework.boot:spring-boot-starter-validation"
-    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
-    implementation "org.springframework.boot:spring-boot-starter-data-redis"
-    implementation "org.springframework.boot:spring-boot-starter-data-rest"
-    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
-    implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
-    implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
-    implementation "org.springframework.boot:spring-boot-starter-websocket"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
-
-    // assist
-    implementation "org.springframework.boot:spring-boot-configuration-processor"
-}
-
-repositories {
-    maven {
-        url "https://maven.aliyun.com/repository/public"
+    dependencies {
+        // log4j
+        implementation "com.lmax:disruptor:3.4.2"
+        // commons lang
+        implementation "org.apache.commons:commons-lang3:3.8"
+        // springdoc
+        implementation "org.springdoc:springdoc-openapi-common:${springdocVersion}"
+        implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
+        implementation "org.springdoc:springdoc-openapi-hateoas:${springdocVersion}"
+        implementation "org.springdoc:springdoc-openapi-data-rest:${springdocVersion}"
+        // spring 其他依赖
+        implementation "org.javassist:javassist:3.20.0-GA"
+        implementation "org.aspectj:aspectjweaver:1.9.3"
+        implementation "cglib:cglib:3.2.11"
+        // spring boot starter
+        implementation "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
+        implementation "org.springframework.boot:spring-boot-starter-aop:${springBootVersion}"
+        implementation "org.springframework.boot:spring-boot-starter-cache:${springBootVersion}"
+        implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+        implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+        // prometheus 支持
+        implementation "io.micrometer:micrometer-registry-prometheus:1.5.6"
+        // assist
+        implementation "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
     }
-    jcenter()
-    mavenCentral()
-}
-/*
- *  Plugin: java配置
- */
-compileJava {
-    sourceCompatibility = 14
-    targetCompatibility = 14
-    options.encoding = "UTF-8"
-}
-/*
- *  Plugin: Spring Boot 配置
- */
-bootRun {
-    main = "${mainClassName}"
-    jvmArgs = ["-Xms300M", "-Xmx300M"]
+
+    compileJava {
+        sourceCompatibility = 15
+        targetCompatibility = 15
+        options.encoding = "UTF-8"
+        options.compilerArgs.add("--enable-preview")
+    }
+
+    compileTestJava {
+        sourceCompatibility = 15
+        targetCompatibility = 15
+        options.encoding = "UTF-8"
+        options.compilerArgs.add("--enable-preview")
+    }
+
+    repositories {
+        maven {
+            url "https://maven.aliyun.com/repository/public"
+        }
+        jcenter()
+        mavenCentral()
+    }
 }
